--- a/index.html
+++ b/index.html
@@ -21,53 +21,102 @@
             </div>
         </div>
     </br>
+        <!-- Button trigger modal -->
         <div class="row">
-            <div class="col-sm-2">
-            </div>
-            <div class="col-sm-10">
-                <h4>Please enter the required information, and press submit.</h4>
-            </div>
-        </div>
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="inputName" class="col-sm-2 control-label">Subject</label>
-                <div class="col-sm-10">
-                    <select class="form-control">
-                        <option>Suggestion</option>
-                        <option>Compliment</option>
-                        <option>Complaint</option>
-                        <option>Product Request</option>
-                        <option>Other</option>
-                    </select>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputName" class="col-sm-2 control-label">Name</label>
-                <div class="col-sm-10">
-                    <input type="name" class="form-control" id="inputName" placeholder="Name">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputBody" class="col-sm-2 control-label">Comments</label>
-                <div class="col-sm-10">
-                    <textarea rows="11" type="body" class="form-control" id="inputBody" placeholder="Enter Comments Here"></textarea>
-                </div>
-            </div>
-        </form>
-        <div class="col-sm-offset-2 col-sm-10">
-            <button class="btn btn-default" type="submit" id="send">Submit</button>
         </br>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <p>trademark/copyright is applicable</p>
+        </br>
+        </br>
+        </br>
+            <div class="col-md-6 text-center">
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#productRequest">
+                    Product Request
+                </button>
             </div>
+            <div class="col-md-6 text-center">
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#problemSuggestion">
+                    Problem/Suggstion
+                </button>
+            </div>
+        </div>
+        <!-- Modals -->
+        <div class="modal fade" id="productRequest" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Product Request</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p class="lead">Product Request</p>
+                        <form>
+                            <div class="form-group">
+                                <p>Brand</p>
+                                <input type="brand" class="form-control" id="brand" placeholder="Brand">
+                            </div>
+                            <div class="form-group">
+                                <p>Size</p>
+                                <input type="size" class="form-control" id="size" placeholder="Size">
+                            </div>
+                            <div class="form-group">
+                                <p>Quantity</p>
+                                <input type="quantity" class="form-control" id="quantity" placeholder="Quantity">
+                            </div>
+                            <div class="form-group">
+                                <p>Your Name</p>
+                                <input type="name" class="form-control" id="name" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <p>Best Form of Contact</p>
+                                <input type="contact" class="form-control" id="contact" placeholder="Email or Phone Number">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="sendRequest">Send</button>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="modal fade" id="problemSuggestion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel">Problem/Suggestion</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p class="lead">Problem/Suggestion</p>
+                            <form>
+                                <div class="form-group">
+                                    <textarea type="problem" class="form-control" id="problem" placeholder="Describe here" rows="4"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <p>Your Name</p>
+                                    <input type="name" class="form-control" id="name" placeholder="Name">
+                                </div>
+                                <div class="form-group">
+                                    <p>Best Form of Contact</p>
+                                    <input type="contact" class="form-control" id="contact" placeholder="Email or Phone Number">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="sendProblem">Send</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <div class="row">
+        </br>
+        </br>
+        </br>
+        </br>
+            <div class="col-md-12">
+                <p>trademark/copyright if applicable</p>
+            </div>
+        </div>
     </div>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
