Anon added, String added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <img src="img/redwmlogo.jpg" id="logo" class="img-responsive"/>
             </div>
             <div class="col-md-9 text-center" id="title">
+                </br>
+                </br>
                 <h1>Warehouse Market Customer Feedback</h1>
             </div>
         </div>
@@ -66,7 +68,7 @@
                                 <input type="name" class="form-control" id="name" placeholder="Name">
                             </div>
                             <div class="form-group">
-                                <p>Best Form of Contact</p>
+                                <p>Best Form of Contact (will be used to let you know when product has arrived)</p>
                                 <input type="contact" class="form-control" id="contact" placeholder="Email or Phone Number">
                             </div>
                         </form>
@@ -92,12 +94,12 @@
                                     <textarea type="problem" class="form-control" id="problem" placeholder="Describe here" rows="4"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <p>Your Name</p>
-                                    <input type="name" class="form-control" id="name" placeholder="Name">
+                                    <p>Your Name (or Anonymous)</p>
+                                    <input type="name" class="form-control" id="nameProblem" placeholder="Name">
                                 </div>
                                 <div class="form-group">
-                                    <p>Best Form of Contact</p>
-                                    <input type="contact" class="form-control" id="contact" placeholder="Email or Phone Number">
+                                    <p>Best Form of Contact (or Anonymous)</p>
+                                    <input type="contact" class="form-control" id="contactProblem" placeholder="Email or Phone Number">
                                 </div>
                             </form>
                         </div>
