Title margin fixed

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="row" id="header">
+        <div class="row">
             <div class="col-md-3">
                 <img src="img/redwmlogo.jpg" id="logo" class="img-responsive"/>
             </div>
-            <div class="col-md-9 text-center" id="title">
+            <div class="col-md-9 text-center">
                 </br>
                 </br>
                 <h1>Warehouse Market Customer Feedback</h1>
