Spellcheck & margin added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="col-md-6 text-center">
                 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#problemSuggestion">
-                    Problem/Suggstion
+                    Problem/Suggestion
                 </button>
             </div>
         </div>
@@ -91,7 +91,7 @@
                             <p class="lead">Problem/Suggestion</p>
                             <form>
                                 <div class="form-group">
-                                    <textarea type="problem" class="form-control" id="problem" placeholder="Describe here" rows="4"></textarea>
+                                    <textarea type="problem" class="form-control" id="problem" placeholder="Describe here" rows="4" contenteditable="true" spellcheck="true"></textarea>
                                 </div>
                                 <div class="form-group">
                                     <p>Your Name (or Anonymous)</p>
