--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </br>
         </br>
         </br>
-            <div class="col-md-12">
+            <div class="col-md-12" id="copyright">
                 <p>trademark/copyright if applicable</p>
             </div>
         </div>
